tests/warn/param-control2.jo
param pageWidth: Int
param newLine: Bool

def pretty(s: String): Unit =
  println pageWidth

def g(): Unit =
  pretty "hello, word"
  h()

def h(): Unit = i()

def i(): Unit =
  g()

def main receives IO.stdout = // error
  g() with pageWidth = 30
  i()
